versions/26.2/translated/uk_ua/develop/blocks/first-block.md
---
title: Створення вашого першого блока
description: Навчіться як створювати власні блоки в Minecraft.
authors:
  - bluebear94
  - cassiancc
  - CelDaemon
  - Earthcomputer
  - IMB11
  - its-miroma
  - xEobardThawne
  - NotNightSky
resources:
  https://docs.neoforged.net/docs/blocks/: Блоки — Документація NeoForge
---

Блоки є будівельними блоками Minecraft (без каламбуру) — як і все інше в Minecraft, вони зберігаються в реєстрах.

## Підготовка класів ID блоків {#preparing-your-block-id-classes}

Якщо ви вже виконали кроки, описані на сторінці [створення вашого першого предмета](../items/first-item), цей процес здасться вам дуже знайомим: вам потрібно буде створити класи для зберігання ID ваших блоків. ID для блоків із предметами зберігаються як `BlockItemId`, тоді як блоки без них зберігають їх як `ResourceKey`.

Ці посилання на блок використовуються для [генерованих даними теґів блоків](../data-generation/tags).

:::: tabs

== Блоки з предметами

Ми розмістимо метод у класі з назвою `ModBlockItemIds` (або будь-якою іншою назвою на ваш розсуд). Цей клас містить усі блоки, що мають відповідні предмети блоків.

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlockItemIds.java#first_block

::: tip

Mojang теж так робить зі своїми блоками! Перегляньте клас `BlockItemIds` для натхнення.

:::

== Блоки без предметів

Ми розмістимо метод, що створює `ResourceKey`, у класі з назвою `ModBlockIds` (або будь-якою іншою назвою на ваш розсуд). Цей клас містить усі блоки, що не мають відповідні предмети блоків.

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlockIds.java#first_block

::: tip

Mojang теж так робить зі своїми блоками! Перегляньте клас `BlockIds` для натхнення.

:::

::::

## Підготовка вашого класу блоків {#preparing-your-blocks-class}

Реєстрація блоків також схожа на [реєстрацію предметів](../items/first-item#registering-an-item): ми створимо дві перевантажені версії методу `register()` для реєстрації ваших блоків — одну для блоків, що мають відповідні предмети, та іншу для блоків без них.

Вам слід розмістити ці методи в класі з назвою `ModBlocks` (або будь-якою іншою назвою на ваш розсуд).

Mojang робить щось надзвичайно подібне з усталеними блоками; ви можете звернутися до класу `Blocks`, щоб побачити, як вони це роблять.

::: warning

Обидві наведені нижче перевантаження методу `register()` є **обов’язковими** у вашому класі `ModBlocks`. Перевантаження для блоків з предметами внутрішньо викликає перевантаження для блоків без предметів. Якщо бракує будь-якого з перевантажень, ваш код не скомпілюється.

:::

::: tabs

== Блоки з предметами

Блоки з предметами використовують параметр `BlockItemId`, який містить ID як самого блока, так і відповідного йому предмета.

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlocks.java#first_block_item

== Блоки без предметів

Блоки без предметів використовують параметр `ResourceKey`, що містить ID блока.

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlocks.java#first_block

:::

Як і з предметами, вам потрібно переконатися, що клас завантажено, щоб усі статичні поля, що містять екземпляри вашого блока, були ініціалізовані.

Ви можете зробити це, створивши фіктивний метод `initialize`, який можна викликати в [ініціалізаторі мода](../getting-started/project-structure#entrypoints), щоб запустити статичну ініціалізацію.

::: info

Якщо ви не знаєте, що таке статична ініціалізація, то це процес ініціалізації статичних полів у класі. Це робиться, коли клас завантажується JVM, і робиться до створення будь-яких екземплярів класу.

:::

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlocks.java#static_initialization

<<< @/reference/26.2/src/main/java/com/example/docs/block/ExampleModBlocks.java#initialize

## Створення та реєстрація вашого блока {#creating-and-registering-your-block}

Подібно до предметів, блоки приймають у своєму конструкторі клас `BlockBehaviour.Properties`, який визначає властивості блока, такі як його звукові ефекти та рівень добування.

Ми не будемо розглядати всі варіанти тут — ви можете самостійно переглянути клас, щоб побачити різні варіанти, які мають бути зрозумілими.

Для прикладу ми створимо простий блок, який має властивості ґрунту, але є іншим матеріалом.

- Ми створюємо параметри наших блоків подібно до того, як ми створювали параметри предметів у посібнику щодо предметів.
- Ми кажемо методу `register` створити екземпляр `Block` з налаштувань блока, викликавши конструктор `Block`.

::: tip

Ви також можете використовувати `BlockBehaviour.Properties.ofFullCopy(BlockBehaviour block)`, щоб скопіювати налаштування блока що існує, у цьому випадку ми могли б використати `Blocks.DIRT`, щоб скопіювати налаштування ґрунту, але для прикладу ми скористаємося конструктором.

:::

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlocks.java#condensed_dirt

### Додавання предмета блока до вкладки творчості {#adding-your-block-s-item-to-a-creative-tab}

Оскільки `BlockItem` створюється та реєструється автоматично, щоб додати його до вкладки творчості, ви повинні використати метод `Block.asItem()`, щоб отримати екземпляр `BlockItem`.

Для цього прикладу ми додамо блок на вкладку `BUILDING_BLOCKS`. Щоб замість цього додати блок на вкладку спеціального оголошення, перегляньте [власні вкладки творчості](../items/custom-creative-tabs).

<<< @/reference/26.2/src/main/java/com/example/docs/block/ModBlocks.java#add_to_creative_tab

Ви повинні розмістити це у функції `initialize()` вашого класу.

Тепер ви повинні помітити, що ваш блок знаходиться в інвентарі творчості, і його можна розмістити у світі!

![Блоки у світі без відповідної моделі чи текстури](/assets/develop/blocks/first_block_0.png)

Однак є кілька проблем: блок-предмет не має назви, і блок не має текстури, моделі блока чи моделі предмета.

## Додання перекладу для блока {#adding-block-translations}

Щоб додати переклад, ви повинні створити ключ перекладу у своєму файлі перекладу — `assets/example-mod/lang/en_us.json` (`uk_ua.json` для української).

Minecraft використовуватиме цей переклад в інвентарі творчості та інших місцях, де показано його назву, наприклад у повідомленнях команд.

```json
{
  "block.example-mod.condensed_dirt": "Condensed Dirt"
}
```

Ви можете перезапустити гру або створити свій мод і натиснути <kbd>F3</kbd>+<kbd>T</kbd>, щоб застосувати зміни, і ви побачите, що блок має назву в інвентарі творчості та інших місцях наприклад екран статистики.

## Моделі й текстури {#models-and-textures}

Усі текстури блоків можна знайти в теці `assets/example-mod/textures/block` — приклад текстури для блока «Condensed Dirt» можна використовувати безплатно.

<DownloadEntry visualURL="/assets/develop/blocks/first_block_1.png" downloadURL="/assets/develop/blocks/first_block_1_small.png">Текстура</DownloadEntry>

Щоб текстура промальовувалася в грі, ви повинні створити модель блока, яку можна знайти у файлі `assets/example-mod/models/block/condensed_dirt.json` для блока «Condensed Dirt». Для цього блока ми будемо використовувати тип моделі `block/cube_all`.

<<< @/reference/26.2/src/main/generated/assets/example-mod/models/block/condensed_dirt.json

Щоб блок позувався у вашому інвентарі, вам потрібно буде створити [клієнтський предмет](../items/first-item#creating-the-client-item), який вказує на вашу модель блока. Для цього прикладу клієнтського предмета для блока «Condensed Dirt» можна знайти за адресою `assets/example-mod/items/condensed_dirt.json`.

<<< @/reference/26.2/src/main/generated/assets/example-mod/items/condensed_dirt.json

::: tip

Вам потрібно лише створити клієнтський предмет, якщо ви зареєстрували `BlockItem` разом зі своїм блоком!

:::

Коли ви завантажуєте гру, ви можете помітити, що текстури все ще немає. Це тому, що вам потрібно додати визначення стану блока.

## Створення визначення стану блока {#creating-the-block-state-definition}

Визначення стану блока використовується для вказівки грі, яку модель рендерити на основі поточного стану блока.

Для прикладу блока, який не має складного стану блока, у визначенні потрібен лише один запис.

Цей файл має міститися в папці `assets/example-mod/blockstates`, а його ім’я має збігатися з ID блока, використаним під час реєстрації вашого блока в класі `ModBlocks`. Наприклад, якщо ID блока `condensed_dirt`, файл повинен мати назву `condensed_dirt.json`.

<<< @/reference/26.2/src/main/generated/assets/example-mod/blockstates/condensed_dirt.json

::: tip

Стани блоків неймовірно складні, тому вони будуть розглянуті далі на [їхній окремій сторінці](./blockstates).

:::

Перезапустіть гру або перезавантажте за допомогою <kbd>F3</kbd>+<kbd>T</kbd>, щоб застосувати зміни — ви зможете побачити текстуру блока в інвентарі та фізично у світі:

![Блок у світі з відповідною текстурою та моделлю](/assets/develop/blocks/first_block_4.png)

## Додання здобичі для блока {#adding-block-drops}

Під час ламання блока в режимі виживання ви можете побачити, що блок не падає — можливо, вам потрібна ця функція, однак, щоб ваш блок випав як предмет під час ламання, ви повинні запровадити його таблицю здобичі — файл таблиці здобичі слід розмістити в теці `data/example-mod/loot_table/blocks/`.

::: info

Щоб краще зрозуміти таблиці здобичі, ви можете звернутися до сторінки [Вікі Minecraft— Таблиці здобичі](https://minecraft.wiki/w/Loot_table).

:::

<<< @/reference/26.2/src/main/resources/data/example-mod/loot_tables/blocks/condensed_dirt.json

Ця таблиця здобичі забезпечує випадіння одного предмета з блока, коли блок ламаний або підірваний вибухом.

## Рекомендація інструмента для збирання {#recommending-a-harvesting-tool}

Ви також можете захотіти, щоб ваш блок можна було збирати лише певним інструментом — наприклад, ви можете зробити свій блок, що ламається швидше за допомогою лопати.

Усі теґи інструментів слід розміщувати в теці `data/minecraft/tags/block/mineable/`, де назва файлу залежить від типу використовуваного інструмента, одного з наступного:

- `hoe.json`
- `axe.json`
- `pickaxe.json`
- `shovel.json`

Уміст файлу досить простий — це список предметів, які потрібно додати в теґ.

Цей приклад додає блок «Condensed Dirt» до теґу `shovel`.

<<< @/reference/26.2/src/main/resources/data/minecraft/tags/mineable/shovel.json

Якщо ви бажаєте, щоб для добування блока був потрібний інструмент, додайте `.requiresCorrectToolForDrops()` до налаштувань блока, а також додайте відповідний теґ рівня добування.

## Рівні добування {#mining-levels}

Подібним чином теґ рівня добування можна знайти в теці `data/minecraft/tags/block/` й відповідає такому формату:

- `needs_stone_tool.json` — потребує як мінімум кам'яні інструменти
- `needs_iron_tool.json` — потребує як мінімум залізні інструменти
- `needs_diamond_tool.json` — потребує як мінімум діамантові інструменти.

Файл має той самий формат, що й файл інструмента збирання — список предметів, які потрібно додати до теґу.

## Додаткові уточнення {#extra-notes}

Якщо ви додаєте кілька блоків до свого мода, ви можете розглянути можливість використання [генерації даних](../data-generation/setup) для автоматизації процесу створення моделей блоків і предметів, визначень стану блоків і таблиць здобичі.
